--- a/loifoi-backend/loifoi-backend/src/main/resources/application.properties.example
+++ b/loifoi-backend/loifoi-backend/src/main/resources/application.properties.example
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/loifoi
-spring.datasource.username=root
-spring.datasource.password=JoeRoot33
+spring.datasource.username=example
+spring.datasource.password=example
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
